--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "家宴城",
     "navigationBarTextStyle":"black"
   },
   "tabBar": {
